# estrella

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yaml  flake.nix  nfpm.yaml
.github/workflows/: check.yml  ci.yml  dependabot-auto-merge.yml  release.yml
docs/: releasing.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: canvas-overlay.spec.ts  composer.spec.ts  patterns.spec.ts  profiles.spec.ts  tabs.spec.ts  weave.spec.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ComponentEditor.tsx  ComposerForm.tsx  EditorForm.tsx  JsonForm.tsx  LayerCanvas.tsx  PatternForm.tsx  PhotoForm.tsx  PrintOptions.tsx  ProfileSelector.tsx  ReceiptForm.tsx  Tabs.tsx  WeaveForm.tsx
nix/modules/: estrella.nix
src/: error.rs  lib.rs  main.rs  receipt.rs  server.rs
src/art/: attractor.rs  automata.rs  calibration.rs  corrupt_barcode.rs  crosshatch.rs  crystal.rs  databend.rs  density.rs  erosion.rs  estrella.rs  flowfield.rs  glitch.rs  image.rs  jitter.rs  microfeed.rs  mod.rs  moire.rs  mycelium.rs  overburn.rs  plasma.rs  reaction_diffusion.rs  riley.rs  riley_check.rs  riley_curve.rs  rings.rs  ripple.rs  scanline_tear.rs  scintillate.rs  stipple.rs  topography.rs  tunnel.rs  vasarely.rs  vasarely_bubbles.rs  vasarely_hex.rs  voronoi.rs  waves.rs  weave.rs  woodgrain.rs  zebra.rs
src/components/: barcode.rs  graphics.rs  layout.rs  markdown.rs  mod.rs  receipt.rs  text.rs
src/document/: barcode.rs  canvas.rs  graphics.rs  layout.rs  markdown.rs  mod.rs  resolve.rs  text.rs  types.rs
src/fixtures/: canvas-demo.json  canvas-showcase.json  emoji-showcase.json  kitchen-sink.json  morning-briefing.json  receipt-full.json  receipt.json
src/ir/: analyze.rs  chunking.rs  codegen.rs  mod.rs  ops.rs  optimize.rs  split.rs
src/json_api/: convert.rs  mod.rs  schema.rs
src/logos/: flourish.rs  frame.rs  mod.rs  ripple.rs  star.rs
src/preview/: barcode.rs  emoji.rs  font.rs  mod.rs  text.rs  ttf_font.rs
src/preview/fonts/: t0-9x18.psf
src/printer/: config.rs  mod.rs
src/protocol/: barcode.rs  commands.rs  cp437.rs  graphics.rs  mod.rs  nv_graphics.rs  page.rs  text.rs
src/render/: chart.rs  composer.rs  context.rs  dither.rs  mod.rs  patterns.rs  weave.rs
src/render/preview/: mod.rs  text.rs
src/server/: mod.rs  state.rs  static_files.rs
src/server/handlers/: composer.rs  json_api.rs  mod.rs  patterns.rs  photo.rs  profiles.rs  receipt.rs  weave.rs
src/shader/: adjust.rs  blend.rs  distance.rs  distort.rs  grid.rs  line.rs  mod.rs  noise.rs  quantize.rs  transform.rs  wave.rs
src/transport/: bluetooth.rs  mod.rs  usb.rs
tests/: golden_tests.rs
