[package]
name = "estrella"
version = "0.1.0"
edition = "2024"
description = "Thermal receipt printer library for Star Micronics printers via Bluetooth"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
image = "0.25"
libc = "0.2"
qrcode = "0.14"
pdf417 = "0.2"
spleen-font = { version = "0.2", features = ["s6x12", "s8x16", "s12x24"] }
barcoders = "2"
pulldown-cmark = "0.12"

# HTTP server dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
