[package]
name = "estrella"
version = "0.1.2"
edition = "2024"
description = "Thermal receipt printer library for Star Micronics printers via Bluetooth"
license = "MIT"

[dependencies]
chrono = "0.4"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
image = "0.25"
libc = "0.2"
qrcode = "0.14"
pdf417 = { git = "https://github.com/Sofiman/pdf417", rev = "8a59902e" }
rand = "0.10"
spleen-font = { version = "0.2", features = ["s6x12", "s8x16", "s12x24"] }
ab_glyph = "0.2"
barcoders = "2"
pulldown-cmark = "0.12"

# HTTP server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
async-trait = "0.1"
flate2 = "1"
libheif-rs = { version = "1", optional = true }

[features]
default = ["heif"]
heif = ["dep:libheif-rs"]

[dev-dependencies]
pretty_assertions = "1"
